# NARC

./: .gitignore  CMakeLists.txt  GenProjects.bat  LICENSE  README.md  build.bat  cmake.sh  install-deps.bat  install-deps.sh  install.bat  premake5.lua
.github/workflows/: build.yml
NARC/: imgui.ini  premake5.lua
NARC/dep/ImGuiColorTextEdit/: CMakeLists.txt  TextEditor.cpp  TextEditor.h
NARC/dep/glad/include/glad/: glad.h
NARC/dep/imgui/: CMakeLists.txt
NARC/src/: App.cpp  App.h  Assert.h  Log.cpp  Log.h  Request.cpp  Request.h  RequestWindow.cpp  RequestWindow.h  Response.cpp  Response.h  ResponseWindow.cpp  ResponseWindow.h  SettingsManager.cpp  SettingsManager.h  WebsocketWindow.cpp  WebsocketWindow.h  Workspace.cpp  Workspace.h  WorkspaceManager.cpp  WorkspaceManager.h  WorkspaceWindow.cpp  WorkspaceWindow.h  main.cpp
res/: resource.rc
scripts/premake/glad/: premake5.lua
scripts/premake/glfw/: premake5.lua
scripts/premake/imgui/: premake5.lua
src/: App.cpp  App.h  Assert.h  Console.h  ImGui_additions.h  Log.cpp  Log.h  RequestWindow.cpp  RequestWindow.h  ResponseWindow.cpp  ResponseWindow.h  Settings.cpp  Settings.h  SettingsManager.cpp  SettingsManager.h  WebsocketWindow.cpp  WebsocketWindow.h  Window.h  WorkspaceManager.cpp  WorkspaceManager.h  WorkspaceWindow.cpp  WorkspaceWindow.h  main.cpp
tools/: cmake.sh  install-deps.bat  install-deps.sh
